--- a/recette1.html
+++ b/recette1.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="value" content="30">
+    <meta http-equiv="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stile.css">
     <title>Tom Plate</title>
